<!--All the names of the application in english-->
<resources>
    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_phrases">Phrases</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_colors">Colors</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_numbers">Numbers</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_family">Family</string>

    <string name="app_name" translatable="false">Miwok</string>

    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="five">five</string>
    <string name="six">six</string>
    <string name="seven">seven</string>
    <string name="eight">eight</string>
    <string name="nine">nine</string>
    <string name="ten">ten</string>

    <string name="red">red</string>
    <string name="green">green</string>
    <string name="brown">brown</string>
    <string name="gray">gray</string>
    <string name="black">black</string>
    <string name="white">white</string>
    <string name="dusty_yellow">dusty yellow</string>
    <string name="mustard_yellow">mustard yellow</string>

    <string name="father">father</string>
    <string name="mother">mother</string>
    <string name="son">son</string>
    <string name="daughter">daughter</string>
    <string name="older_brother">older brother</string>
    <string name="younger_brother">younger brother</string>
    <string name="older_sister">older sister</string>
    <string name="younger_sister">younger sister</string>
    <string name="grandmother">grandmother</string>
    <string name="grandfather">grandfather</string>

    <string name="where_are_you_going">Where are you going?</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="my_name_is">My name is...</string>
    <string name="how_are_you_feeling">How are you feeling?</string>
    <string name="i_m_feeling_good">I’m feeling good</string>
    <string name="are_you_coming">Are you coming?</string>
    <string name="yes_I_m_coming">Yes, I’m coming</string>
    <string name="i_m_coming">I’m coming</string>
    <string name="let_s_go">Let’s go</string>
    <string name="come_here">Come here</string>

    <string name="play_icon">Play Icon</string>
    <string name="image_item">Image for the item</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>


</resources>
