<?xml version="1.0" encoding="utf-8"?><!--Layout for the first activity-->

<!--Linear layout for order the text in a vertical orientation. Use the color attribute for background-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--Text view for the numbers category, using the catergory style and the reference for text&color-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_numbers">

        <TextView
            android:id="@+id/numbers"
            style="@style/CategoryStyle"
            android:text="@string/category_numbers"></TextView>
    </FrameLayout>

    <!--Text view for the family category, using the catergory style and the reference for text&color-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_family">

        <TextView
            android:id="@+id/family"
            style="@style/CategoryStyle"
            android:text="@string/category_family"></TextView>
    </FrameLayout>

    <!--Text view for the colors category, using the catergory style and the reference for text&color-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_colors">

        <TextView
            android:id="@+id/colors"
            style="@style/CategoryStyle"
            android:text="@string/category_colors"></TextView>
    </FrameLayout>

    <!--Text view for the phrases category, using the catergory style and the reference for text&color-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_phrases">

        <TextView
            android:id="@+id/phrases"
            style="@style/CategoryStyle"
            android:text="@string/category_phrases"></TextView>
    </FrameLayout>
</LinearLayout>
